manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeout-svc
spec:
  type: ClusterIP
  selector:
    app: timeout
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeout
  template:
    metadata:
      labels:
        app: timeout
    spec:
      containers:
        - name: timeout 
          image: hs-registry.kr.ncr.ntruss.com/timeout:test
          ports:
            - containerPort: 80
